<resources>
    <string name="version2">V 2.33</string>
    <string name="Anulados">ANULADOS</string>
    <string name="RecAnulados">RECIBOS ANULADOS</string>
    <string name="FacGeneradas">FACTURA GENERADAS</string>
    <string name="TituloCajasTraidas">ENVASES</string>
    <string name="cliente">CLIENTE</string>
    <string name="TituloFactura">FACTURA</string>
    <string name="TituloFacturaInteres">FACTURA INTERES</string>
    <string name="TituloConsultas">CONSULTAS</string>
    <string name="TituloConsultasCobrador">CONSULTAS RECIBOS</string>
    <string name="TituloRemito">REMITO</string>
    <string name="TituloOE">SIGUIENTE OE</string>
    <string name="TitleGenerados">GENERADOS</string>
    <string name="TitleGeneradosRec">RECIBOS GENERADOS</string>
    <string name="TitleGeneradosMot">NO COBRADOS GENERADOS</string>
    <string name="TitleGeneradosIngMot">INGRESAR MOTIVO NO COBRADOS</string>
    <string name="TituloEntrega">ENTREGAS</string>
    <string name="TituloProductos">PEDIDOS PRODUCTOS</string>
    <string name="TituloRecibos">RECIBO</string>
    <string name="PausaTitle">PAUSAR VIAJE</string>
    <string name="MenuCobranzaTitle">COBRANZA</string>
    <string name="RecorridoTitle">EN VIAJE</string>
    <string name="SeleccionarClienteTitle">CLIENTES</string>
    <string name="SelccionTitle">FUNCIONES</string>
    <string name="MoendaTitle">MONEDA</string>
    <string name="DeudasTitle">DEUDAS</string>
    <string name="MotNoCob">"Motivo no cobrado:"</string>
    <string name="ViajeTitle">VIAJES</string>
    <string name="ViajeCobrador">VIAJE COBRADOR</string>
    <string name="SalidaTitle">ABANDONAR CLIENTE</string>
    <string name="RetornoTitle">RETORNANDO</string>
    <string name="PausadoTitle">PAUSADO</string>
    <string name="TitleObs">Observaciones: </string>
    <string name="TitleProxVisi">Proxima visita: </string>
    <string name="TitleProxFecha">Hasta: </string>
    <string name="ReciboFec">Fecha: </string>
    <string name="ReciboNum">Num recibo: </string>
    <string name="aceptar">Aceptar</string>
    <string name="original">Original</string>
    <string name="copia">Copia</string>
    <string name="datos">"Obteniendo datos "</string>
    <string name="errorConect2">"No se pudieron obtener los datos, verifique su conexión"</string>
    <string name="espere">"Por favor, espere.. "</string>
    <string name="buscar">Buscar</string>
    <string name="ver">Visualizar</string>
    <string name="buscarCliente">Buscando cliente mas cercano</string>
    <string name="impRemito">Impresion Remito</string>
    <string name="FacturasGen">facturas generadas</string>
    <string name="RecibosGen">Recibos generados</string>
    <string name="FacGen">Facturas Interes generadas</string>
    <string name="Prueba">pru</string>
    <string name="RemitoGen">remitos generados</string>
    <string name="Cobranza">Cobranza</string>
    <string name="NroDocum">Nro. Docum: </string>
    <string name="FechaVenc">Fecha vencimiento:</string>
    <string name="FechaIngc">Debe ingresar una fecha:</string>
    <string name="Cli">Debe ingresar un cliente:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Monto">Monto:</string>
    <string name="Datos">Debe completar todos los datos:</string>
    <string name="CodMoneda">Moneda Recibo:</string>
    <string name="Empresa">Empresa:</string>
    <string name="documento">Documento de referencia:</string>
    <string name="motivo">Seleccione motivo:</string>
    <string name="CodMoneda2">Moneda Factura:</string>
    <string name="TruckSalesTit">Trucksales</string>
    <string name="MenCobranza">VIAJE COBRANZA</string>
    <string name="SeleccionarCliente">CLIENTES</string>
    <string name="IngMotCob">INGRESA MOTIVO NO COBRANZA</string>
    <string name="FacturaDirecta">FACTURA DIRECTA</string>
    <string name="ReporteStock">REPORTE STOCK</string>
    <string name="SeleccionarFicha">SITUACION CLIENTE</string>
    <string name="CierreCaja">CIERRE DE CAJA</string>
    <string name="NoCierre">ARQUEO DE CAJA</string>
    <string name="NoCobrado">MOTIVO NO COBRADO</string>
    <string name="ValoresRec">VALORES RECIBIDOS</string>
    <string name="ImporteRec">El importe debe ser menor al importe recibido </string>
    <string name="IngreseTot">"Total: "</string>
    <string name="IngreseDeud">Debe ingresar un valor efectivo</string>
    <string name="Valmen">Debe ingresar un valor menor</string>
    <string name="Sindatos">No existen datos</string>
    <string name="Caja">Debe seleccionar una caja</string>
    <string name="Noexiste">No existen valores con el documento seleccionado</string>
    <string name="Falta">Falta entregar: </string>
    <string name="SeleccCaja">Seleccionar Caja</string>
    <string name="TitMoenda">MONEDA</string>
    <string name="TitDeudas">DEUDAS</string>
    <string name="TitNoCobro">MOTIVO NO COBRO</string>
    <string name="ObservacionAgregada">Motivo no cobro agregado</string>
    <string name="y">y</string>
    <string name="sucursal">Sucursal</string>
    <string name="NroViaje">Nro. Viaje</string>
    <string name="ordenEntrega">Orden de entrega:</string>
    <string name="noHayAnuladas">No hay facturas anuladas para hoy</string>
    <string name="noHayRecAnuladas">No hay recibos anulados para hoy</string>
    <string name="noHayFac">No hay facturas generadas para hoy</string>
    <string name="oCliente">Otro cliente</string>
    <string name="cargando_dialog">Cargando...</string>
    <string name="anuladosBtn">Anulados</string>
    <string name="ErrorAnulados">No se obtuvo respuesta</string>
    <string name="anuladasHoy"> Facturas anuladas hoy</string>
    <string name="anuladasHoyRec"> Recibos anulados hoy</string>
    <string name="facGen"> Facturas de Interes generadas hoy</string>
    <string name="ErrorConexion">No hay conexion a internet</string>
    <string name="botonPausa">Seleccionar motivo</string>
    <string name="ValorFact0">SOLAMENTE PARA FACTURA</string>
    <string name="ValorRec">SOLAMENTE PARA RECIBO</string>
    <string name="dispo">Disponible:</string>
    <string name="Ndispo">No Disponible:</string>
    <string name="valorFact1">Cod Suc Tri</string>
    <string name="valorFact2">Cod Fac Tri</string>
    <string name="valorFact3">Num Fact</string>
    <string name="valorReten">Num Reten</string>
    <string name="codSuc">Cod Suc</string>
    <string name="codFac">Cod Fac</string>
    <string name="valorRecibo">Número: </string>
    <string name="valorCheque">Ingrese cheque</string>
    <string name="ValorBotonFact">Validar Facutra</string>
    <string name="IngresoVal">Ingresar Valores</string>
    <string name="ValorBotonRec">Validar Recibo</string>
    <string name="AceptarRecibo">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="GuardaUbi">Desea guardar la ubicación del cliente?</string>
    <string name="ElimRec">Desea anular el recibo?</string>
    <string name="ElimFac">Desea anular la factura?</string>
    <string name="FacturasGeneradas">Facturas Generadas</string>
    <string name="Faltantes">Faltantes en  Orden de Entrega</string>
    <string name="tipo">Tipo</string>
    <string name="saldoAnterior">S. Ant</string>
    <string name="EntregaCaja">Entrega</string>
    <string name="RetriaCaja">Retira</string>
    <string name="SaldoCaja">Saldo</string>
    <string name="TotalCaja">"Total Cobrado: "</string>
    <string name="TotalDeuda">"Total Deuda Seleccionada: "</string>
    <string name="usuarioTool">"Usuario: "</string>
    <string name="clienteGenerados">"Cliente: "</string>
    <string name="SucursalGenerados">"Sucursal: "</string>
    <string name="deudaselec">"Debe seleccionar alguna deuda: "</string>
    <string name="Hola">Hola</string>
    <string name="Tienes">tienes</string>
    <string name="Viajes">viajes hoy</string>
    <string name="Selec">Seleccione un viaje para iniciar</string>
    <string name="SelecMon">Seleccione una moneda</string>
    <string name="OredenProd">Orden: </string>
    <string name="PedidoProd">Pedido: </string>
    <string name="NumViajeProd">Nro. Viaje: </string>
    <string name="NomTit">Cliente: </string>
    <string name="NomEmp">Empresa: </string>
    <string name="CodTit">Código: </string>
    <string name="Tel">Tel: </string>
    <string name="Direccion">Dirección: </string>
    <string name="CantidadPrdo">Ctd.</string>
    <string name="CantEntProd">Ctd. Ent.</string>
    <string name="Dto">Dto.</string>
    <string name="UnitProd">Unit.</string>
    <string name="IVAProd">IVA </string>
    <string name="SubTotProd">SubTotal </string>
    <string name="SubTotRec">Rec </string>
    <string name="Quitar">Quitar </string>
    <string name="ImpusetoIVA10">"IMP IVA 10%: "</string>
    <string name="ImpuestoIVA5">"IMP IVA 5%: "</string>
    <string name="TotSinIVAProd">"Total sin IVA: "</string>
    <string name="TotIVA">"IMP IVA Total: "</string>
    <string name="TotPedInicial">"Total Ped. Inicial: "</string>
    <string name="Cobrar">Total Deuda: </string>
    <string name="Descuento">"Descuento: "</string>
    <string name="ErrorDescuento">"El importe no puede ser menor que el descuento: "</string>
    <string name="ACuenta">A Cuenta: </string>
    <string name="Diferencia">Diferencia: </string>
    <string name="Completar">Debe completar el monto a cobrar </string>
    <string name="HorDeCliDef">Horario de </string>
    <string name="HorFecVenc">Fecha viaje </string>
    <string name="HorFec">"Fecha: "</string>
    <string name="Observaciones">Obs.: </string>
    <string name="Fechavisita">Fecha proxima visita.: </string>
    <string name="aCli"> a </string>
    <string name="RemitoExito">El remito fue agregado exitosamente</string>
    <string name="Observ">No existen registros de la fecha actual de motivos no cobrados</string>
    <string name="NroOrdenCli">Nro. Orden: </string>
    <string name="DistanciaRec">Distancia:</string>
    <string name="Kms">Km</string>
    <string name="HComienz">Hora inicio:</string>
    <string name="RVMessageButton_FinalizarViaje">Finalizar viaje</string>
    <string name="ViajesGen">Viaje:</string>
    <string name="Nro_Docum">Recibo:</string>
    <string name="Nro">Nro.:</string>
    <string name="recibGen">recibos generados.</string>
    <string name="motGen">motivos generados.</string>
    <string name="OEnt">Orden de entrega:</string>
    <string name="NroFact">Nro. factura:</string>
    <string name="NroRem">Nro. remito:</string>
    <string name="Turno">Turno:</string>
    <string name="HroGen">Hora:</string>
    <string name="FecGen">Fecha rec.:</string>
    <string name="ToastText">NO SE OBTUVO UBICACION ACTUAL</string>
    <string name="ToastText1">No se obtuvieron los clientes del viaje seleccionado</string>
    <string name="ToastText2">No se pudo ingresar los valores de la factura de interes</string>
    <string name="ToastText3">Debe completar los datos</string>
    <string name="NroViajeEntrega">Nro. Viaje:</string>
    <string name="SoloRemito">SOLAMENTE PARA REMISION</string>
    <string name="BtnRemito">Generar Remito</string>
    <string name="numRemito">num Remito</string>
    <string name="CXDButtonMessage_LogOut">Salir</string>
    <string name="CXDTitleMessage_Retiro">Retiro</string>
    <string name="CXDTextRetiro_NumViaje">Numero de viaje</string>
    <string name="CXDTextRetiro_NombreSucursal">Sucursal</string>
    <string name="app_name">aLCHEMY Mobile TOYOSA</string>
    <string name="ingrese_credenciales">Ingrese Credenciales</string>
    <string name="ingrese_rec">Ingrese Reclamo</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="log">Login</string>
    <string name="AgregaValores">Agregar</string>
    <string name="TitEfectivo">Ingresar Efectivo</string>
    <string name="chequeImporte">Importe</string>
    <string name="Cantidad">"Cantidad:"</string>
    <string name="Reposicion">"Reposición:"</string>
</resources>