<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/blanco"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/ingrese_rec"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAllCaps="true"
        style="@style/label_normal"/>

    <Spinner
        android:id="@+id/spReclamos"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:weightSum="4"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editTextObservaciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/EditTextNormal"
            android:hint="Observaciones"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRepo"
            style="@style/label_normal"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/Reposicion"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spRepo"
            android:layout_width="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_height="40dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cantidad"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            style="@style/label_normal"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextNormal"
            android:layout_weight="2"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancelar"
            style="@style/ButtonCancelar"/>

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AceptarRecibo"
            style="@style/ButtonGuardar"/>
    </LinearLayout>

</LinearLayout>