<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.trucksales.Visual.Cobranza.IngresarEfectivo">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_topPausa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/AppTheme">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>

                    <ImageView
                        android:id="@+id/btnAtras"
                        style="@style/atrasToolbar"
                        android:src="@drawable/atras_cs" />

                    <TextView
                        android:id="@+id/toolbar_titlePausa"
                        style="@style/tituloStyle1"
                        android:layout_gravity="center"
                        android:layout_width="300dp"
                        android:text="@string/TitEfectivo" />

                </TableRow>
            </TableLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/importe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chequeImporte"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:padding="10dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btnValores"
                style="@style/button_normal"
                android:layout_width="match_parent"
                android:text="@string/AgregaValores" />
        </LinearLayout>


        <ListView
            android:id="@+id/tabla"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="5sp" />

    </LinearLayout>

</LinearLayout>